@@ -5,8 +5,8 @@ DIST README-v7r7-0.BFQ 21937 SHA256 d53e830875c98294b14311d19422e0fa039658eff226
 DIST aufs-sources-3.19_p20150323.tar.xz 165260 SHA256 b6941dff2bfb7a0e167da1ecdb52c913ad8a1abb1daba4de81d7ae66fface690 SHA512 ce104b27a7c8cf142ea89e98e75850ba1f0cd1541326cb1f708fe23131466c875df592e2092ee7a990db0adb5fa50dd7ccd8c54ff28223acbaa1b8c0d8a9d8cb WHIRLPOOL 1649d914980fa1ca85272183943c72ba7a179f28b6d5eee079936726d770f7ec19ec91dc7e9a52d56b8efb1e518f01e75934008a66ab034b058d235562d43682
 DIST deblob-3.19 129098 SHA256 b0e121e80f02676bc023df1470691b94bd0495ae09aa349d1e6edddf7d1b34a2 SHA512 8f9327d5bb56fbc24f72622d579232003db95695c0cd22b4ce0b4692c9757b639c1253548d943f7cbdde9652cf51814f4b4fdf92055e8ae1c9d75acdc68d9a32 WHIRLPOOL bc3ed9eeec3ab77e2f18ec4a2a536a58b4bf2091a50219220c4d1d21de6956709c97dbb098eba64eacb2fac45f410020f6c37a3f890e6e820d5d8faebc3f3b3c
 DIST deblob-check-3.19 659945 SHA256 df5a9b11b095b0d8c3204c9b24118d77689900fc4ef4c3256b13fe86aee0d185 SHA512 f7fc86ebc8e1c61c16d7ce6831368832862346522676b65f4702c77bb2e9b08691f2c67cf88e92929908d5300d53913e7e5365baf3378b1cbe3aca59ec80c672 WHIRLPOOL e5e33da007c07af4ca5713d583f992d9da8c6745761e1956a246de429a44aa972a94cc1db51e67d0ba1aad9b8476ef694d846e8157a85411bcbc1809f20f633a
-DIST genpatches-3.19-3.base.tar.xz 118832 SHA256 f8615f1612a47acb993eb993ecf9cbdfc85c198f53bf647db9bf04a95966e7af SHA512 d065980a078a1cb2e7782c8dce28b124848ba078eff95e122029d8b2700da380249e31a6b1af4fd3209d4bb77b301f5a79147e0340788ea7ecdaa3e08451112b WHIRLPOOL 99485bd39e397e2549b52c646344c0ebf87ed7760ac634dae4ead777425f4850222592629a7958cccd26f65163ea2fda68c4e97eff0d39a251bc319c5ac0db8c
-DIST genpatches-3.19-3.extras.tar.xz 16288 SHA256 7e15f894c2d00cd657843db17c264ee1a0cf1859774a4cbf2e6f0e9316a3ce36 SHA512 b699f96d0c2df0c4c6aef266d1424e28fab732b4dafbe4ae543de2224301f8556c886599d455d55b06569d46966fc7c33e6a334aa3aa06be09069c777b679863 WHIRLPOOL 3daefbcc55d311b505068e0b37ff2d3c8c9640c733a40843b3898bd1bfa46dd35bab1f98e5e8705ec7cb7860dc3f6356562a28bb11b8ec0181013b19c4418977
+DIST genpatches-3.19-4.base.tar.xz 149032 SHA256 c3d23689206a7c5d3c851424ca38edfd903e0aaf31aa607f5d9c82108ae4ae59 SHA512 dc78e638b242bcc93deb1f7ca50843e02cb4904d850031867ce2fd00a0ee1fefc4e3657fde2a4d2647606607abf935b15fba1f86d4f0011230eff24a83f0f670 WHIRLPOOL 147fb303afd8694b1da45b8e7cecab186c1d739c4b3ea5f5fe744f233008b1bb7b52d2b5911ca8eb2a6d99df2fa25e27992d03853dcfa352526453bf71670d68
+DIST genpatches-3.19-4.extras.tar.xz 16280 SHA256 6c5a7b4dc060f733c5178e5c7bb850304ec63d25cadff2e74b2592cb682750a8 SHA512 01a57204e66e3e5a78dbf1f37c3e5a037799f2b2f5264b2fbf4de0aa3c1cf0aefecc9c672d9432c2d6329b50aaeb322894b465b7a9614ea97d0853bf02739366 WHIRLPOOL cfc00e8f11985d137ad599870c62b77742176b4f7df951e676bab81b8791707db35b3e3c0320cb56ab27e7e13dfca82904be257e0cec7a43bfbb7bff6b6d6b1e
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
-DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
+DIST lh-sources-kernel-d4f67618772bf873192a77c9fba303d9663d1e65.patch 16962 SHA256 e5b0f1882861cb1d0070e49c41a3e7390cf379f183be0bddb54144ecc68fb8f9 SHA512 bc98c5c3ccc6edc97adf44920e679dbcbca4664a847ee1475d6da39d5b0eadfd5bf1659856e9ee024ca038ca4481f22ddf61aee7a2e44990900f297f751a2cef WHIRLPOOL 5daba65cd56e556bd3088dce43c77af1eeb0fe8bf735654abcc4c5cf1516fd5ca7952cb2dbb3ba19c3a69aa0feff1b276af7323f2839e42de28285de5ddceed0
 DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
