@@ -1,4 +1,11 @@
 
+*lh-sources-3.19.3 (27 Mar 2015)
+
+  27 Mar 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-3.19.3.ebuild,
+  -lh-sources-3.19.2.ebuild:
+  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release;
+  update gcc opt patch
+
   23 Mar 2015; Justin Lecher <jlec@gentoo.org> -lh-sources-3.18.7.ebuild,
   -lh-sources-3.19.0.ebuild, -lh-sources-3.19.1.ebuild,
   lh-sources-3.19.2.ebuild:
